--- a/projects/06-shopping-cart/package.json
+++ b/projects/06-shopping-cart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-buscador-peliculas",
+  "name": "06-shopping-cart",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "just-debounce-it": "3.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -23,10 +22,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "standard": "^17.1.2",
     "vite": "^7.0.4"
-  },
-  "eslintConfig": {
-    "extends": "standard"
   }
 }
