--- a/projects/08-google-translate-clone/package.json
+++ b/projects/08-google-translate-clone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07-router-react",
+  "name": "08-google-translate-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,17 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "path-to-regexp": "8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
@@ -25,8 +22,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "happy-dom": "^18.0.1",
-    "vite": "^7.0.6",
-    "vitest": "^3.2.4"
+    "vite": "^7.0.6"
   }
 }
